k8s/ui-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wele-ui
  namespace: wele-dev
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`app.wele.in`)
      kind: Rule
      services:
        - name: wele-ui
          port: 80
  tls:
    certResolver: letsencrypt
